User Dashboard button

--- a/src/views/userDashboard.handlebars
+++ b/src/views/userDashboard.handlebars
@@ -53,7 +53,7 @@
                   {{/if}}
                 </select>
                 <div class='text-center mt-4 d-grid gap-2'>
-                  <button type='submit' class='btn btn-dark mb-2'>Cambiar role</button>
+                  <button type='submit' class='btn btn-dark mb-2' id='submitButton' disabled>Cambiar role</button>
                 </div>
                 <div>
                   <small class='form-text text-muted'>* Subir los documentos requeridos para cambiar de User a Premium : <br />- Identificación<br />- Comprobante de domicilio <br />- Comprobante de estado de cuenta</small>
